--- a/PROJECT/project/src/components/BasketItem/style.module.css
+++ b/PROJECT/project/src/components/BasketItem/style.module.css
@@ -1,18 +1,34 @@
 .card{
-    display: flex;
+    display: grid;
+    grid-template-columns:
+    repeat(auto-fit, 
+    minmax(192px, 1fr) 
+    minmax(320px, 1fr) 
+    minmax(100px, 1fr) 
+    minmax(30px, 30px));
     align-items: center;
-    justify-content: space-between;
+    gap: 20px;
     height: 246px;
     border-top: 1px solid black;
     transition: 0.5s;
 }
 
 .card:hover {
-    transform: scale(1.05);
+    transform: scale(1.02);
 }
 
 .card:last-child{
     border-bottom: 1px solid black;
+}
+
+.btn_top{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    border: none;
+    background: none;
+    cursor: pointer;
+    display: none;
 }
 
 .card .img{
@@ -59,11 +75,16 @@
     cursor: pointer;
 }
 
+.info_price{
+    transition: 0.5s;
+    width: 246px;
+}
+
 .price{
+    transition: 0.5s;
     display: flex;
     align-items: center;
     gap: 70px;
-    width: 246px;
 }
 
 .price .discont_price{
@@ -86,10 +107,118 @@
 
 .btn{
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-end;
     height: 166px;
     border: none;
     background: none;
     cursor: pointer;
+}
+
+@media(max-width: 1470px){
+    .info_price{
+        width: 200px;
+    }
+
+    .price{
+        gap: 20px;
+    }
+}
+
+@media(max-width: 1300px){
+    .card{
+        grid-template-columns:
+        repeat(auto-fit, 
+        minmax(192px, 1fr) 
+        minmax(260px, 1fr) 
+        minmax(100px, 1fr) 
+        minmax(30px, 30fr));
+        gap: 10px;
+    }
+}
+
+@media(max-width: 1140px){
+    .card{
+        gap: 80px;
+    }
+    .price{
+        gap: 50px;
+    }
+}
+
+@media(max-width: 900px){
+    .card{
+        gap: 10px;
+    }
+    .price{
+        gap: 10px;
+    }
+}
+
+@media(max-width: 800px){
+    .price{
+        gap: 10px;
+    }
+}
+
+@media(max-width: 736px){
+    .card{
+        padding: 20px 0;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(337px, 1fr));
+        height: 500px;
+        
+    }
+
+    .info{
+        width: 100%;
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
+        height: 60px;
+    }
+
+    .card .img{
+        object-fit: cover;
+        height: 300px;
+        width: 100%;
+        border-radius: 20px;  
+    }
+
+    .price{
+       gap: 70px;
+    }
+
+    .btn{
+        display: none;
+    }
+
+    .btn_top{
+        display: block;
+    }
+}
+
+@media(max-width: 410px){
+    .card{
+        grid-template-columns: repeat(auto-fit, minmax(226px, 1fr));
+        height: 500px;
+        padding: 0;
+    }
+
+    .card .img{
+        height: 150px;
+        width: 100%;
+        border-radius: 20px; 
+    }
+
+    .info{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    .count{
+        width: 100%;
+    }
 }
