--- a/PROJECT/project/src/components/Categories/style.module.css
+++ b/PROJECT/project/src/components/Categories/style.module.css
@@ -1,5 +1,12 @@
-.catalog_categories{
+.catalog_categories {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 337px));
-    gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(337px, 1fr));
+    gap: 30px; 
 }
+
+@media(max-width: 400px){
+    .catalog_categories {
+        grid-template-columns: repeat(auto-fit, minmax(226px, 1fr));
+    }
+}
+
