--- a/PROJECT/project/src/components/BasketCalculation/style.module.css
+++ b/PROJECT/project/src/components/BasketCalculation/style.module.css
@@ -5,10 +5,11 @@
     padding: 25px;
     border-radius: 21px;
     border: 2px solid #000;
-    height: 390px;
+    height: 400px;
     box-shadow:
     inset 0 -0.5em 0.5em rgba(0, 0, 0, 0.264),
     0.6em 0.6em 2em rgba(0, 0, 0, 0.601);
+    transition: 0.5s;
 }
 
 .order p{
@@ -52,4 +53,33 @@
     font-weight: 700;
     color: #FFF;
     cursor: pointer;
+}
+
+@media(max-width: 1440px){
+    .order{
+        gap: 10px;
+        padding: 25px;
+        height: 310px;
+    }
+}
+
+@media(max-width: 400px){
+    .order{
+        height: 230px;
+    }
+
+    .order p {
+        font-size: 25px;
+    }
+
+    .number input{
+        border-radius: 10px;
+        height: 40px;
+        padding: 10px ;
+    }
+    
+    .number button{
+        height: 40px;
+        border-radius: 15px;
+    }
 }
