--- a/PROJECT/project/src/components/BasketContainer/style.module.css
+++ b/PROJECT/project/src/components/BasketContainer/style.module.css
@@ -1,6 +1,32 @@
 .container{
     display: grid;
-    grid-template-columns: repeat(1, 2fr 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(670px, 2fr) minmax(337px, 1fr));
     gap: 60px;
     padding-bottom: 143px;
+    transition: 0.5s;
 }
+
+@media(max-width: 1440px){
+    .container{
+        padding:0 20px;
+    }
+}
+
+@media(max-width: 1140px){
+    .container{
+        grid-template-columns: repeat(auto-fit, minmax(670px, 1fr));
+    }
+}
+
+@media(max-width: 736px){
+    .container{
+        grid-template-columns: repeat(auto-fit, minmax(337px, 1fr));
+    }
+}
+
+@media(max-width: 410px){
+    .container{
+        grid-template-columns: repeat(auto-fit, minmax(226px, 1fr));
+    }
+}
+
