--- a/PROJECT/project/src/components/CategoriesContainer/style.module.css
+++ b/PROJECT/project/src/components/CategoriesContainer/style.module.css
@@ -1,8 +1,15 @@
 .container{
     margin-bottom: 50px;
+    transition: 0.5s;
 }
 .catalog{
     margin-bottom: 80px;
+}
+
+@media(max-width: 1470px){
+    .container{
+        padding:0 20px ;
+    }
 }
 
 
