--- a/PROJECT/project/src/components/CategoriesItem/style.module.css
+++ b/PROJECT/project/src/components/CategoriesItem/style.module.css
@@ -1,3 +1,7 @@
+.item{
+    width: 100%;
+}
+
 .item p{
     font-size: 18px;
     font-weight: 600;
@@ -17,5 +21,12 @@
 }
 
 .item img:hover {
-    transform: scale(1.05);
+    transform: scale(1.02);
+}
+
+@media(max-width: 400px){
+    .item img{ 
+        height: 150px;
+        margin-bottom: 0;
+    }
 }
