--- a/PROJECT/project/src/components/Contacts/style.module.css
+++ b/PROJECT/project/src/components/Contacts/style.module.css
@@ -6,7 +6,9 @@
 
 .footer{
     display: grid;
-    grid-template-columns: 1.5fr 1fr;
+    /* grid-template-columns: 1.5fr 1fr; */
+    grid-template-columns: repeat(auto-fit, minmax(337px, 1fr));
+    gap: 80px;
 }
 
 .footer h2{
@@ -15,12 +17,15 @@
 }
 
 .footer_contact{
+    transition: 0.5s;
+    width: 650px;
     display: flex;
     flex-direction: column;
     gap: 25px;
 }
 
 .footer_contact p{
+    transition: 0.5s;
     font-size: 70px;
     font-style: normal;
     font-weight: 600;
@@ -45,12 +50,14 @@
 }
 
 .footer_address{
+    transition: 0.5s;
     display: flex;
     flex-direction: column;
     gap: 25px;
 }
 
 .footer_address a{
+    transition: 0.5s;
     font-size: 40px;
     font-weight: 600;
     border-bottom: 1px solid black;
@@ -69,5 +76,80 @@
 .container iframe{
     border: none;
     margin: 30px 0 38px;
+    width: 100%;
     height: 525px;
+    object-fit: contain;
+    object-position: top;
+}
+
+
+
+
+@media(max-width: 1320px){
+    .footer_address a{
+        font-size: 25px;
+    }
+
+    .footer_contact p{
+        font-size: 50px;
+    }
+}
+
+@media(max-width: 940px){
+    .footer_address a{
+        font-size: 20px;
+    }
+
+    .footer_contact p{
+        font-size: 35px;
+    }
+}
+
+@media(max-width: 845px){
+    .footer{
+        gap: 6px;
+    }
+    .footer_contact{
+        width: 100%;
+        gap: 5px;
+    }
+    .footer_address{
+        width: 100%;
+        gap: 5px;
+    }
+    .icon p svg{
+        height: 30px;
+        width: 30px;
+    }
+}
+
+@media(max-width: 736px){
+    .work{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .container iframe{
+        height: 250px;
+    }
+}
+
+
+@media(max-width: 400px){
+    .footer h2{
+        font-size: 20px;
+    }
+
+    .footer p{
+        font-size: 20px;
+    }
+
+    .footer a{
+        font-size: 18px;
+    }
+
+    .footer .work p{
+        font-size: 15px;
+    }
 }
