--- a/PROJECT/project/src/components/NavMenu/style.module.css
+++ b/PROJECT/project/src/components/NavMenu/style.module.css
@@ -1,10 +1,11 @@
 .nav{
     position: sticky;
-    z-index: 3;
+    z-index: 2;
     background: white;
     width: 100%;
     top: 0;
     margin-bottom: 80px;
+    height: 118px;
 }
 .container{
     display: flex;
@@ -47,9 +48,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 100px;
 }
 
-.nav_page .nav_a{
+.nav_a{
     display: flex;
     gap: 50px;
 }
@@ -61,14 +63,13 @@
     0 0 0 2px rgba(255, 255, 255, 0.405),
     0.3em 0.3em 1em rgb(64, 123, 61);
     color: white; 
-    transition: 0.5s;
+    transition: color 0.5s, box-shadow 0.5s, border-radius 0.5s;
 }
 
-.nav_page .nav_a a{
+.nav_a a{
     display: flex;
     justify-content: center;
     align-items: center;
-    /* min-width: 100px; */
     font-size: 16px;
     font-weight: 500;
     padding: 0 5px;
@@ -109,62 +110,65 @@
     display: none;
 }
 
-.menu .active{
+.menu.active{
     color: white;
 }
 
-.nav_page .nav_a a:first-child{
+.nav_a a:first-child{
     display: none;
 }
 
-.nav_page .nav_a a:last-child{
+.nav_a a:last-child{
     display: none;
 }
 
-@media(max-width: 1110px){
-    .nav_page .nav_a{
+@media(max-width: 1000px){
+    .nav_page{
+        gap: 35px;
+    }
+}
+
+@media(max-width: 860px){
+    .nav_a{
         gap: 10px;
     }
 
     .nav_page{
         gap: 10px;
     }
+    
 }
 
-@media(max-width: 760px){
+@media(max-width: 736px){
     .basket{
        display: none;
     }
 
-    .nav_page .nav_a a .basket_link{
+    .nav_a a .basket_link{
         display: flex;
         align-items: center;
         justify-content: center;
     }
 
-    .nav_page .nav_a a .basket_link .icon{
-        width: 15px;
-        height: 15px;
+    .nav_a a .basket_link .icon{
+        width: 30px;
+        height: 30px;
     }
 
-    .nav_page .nav_a a .basket_link p{
+    .nav_a a .basket_link p{
         display: flex;
         align-items: center;
         justify-content: center;
         background: red;
-        width: 20px;
-        height: 20px;
-        font-size: 15px;
+        width: 30px;
+        height: 30px;
+        font-size: 25px;
         border-radius: 50%;
         position: relative;
         color: white;
         top: -10px;
-        left: -5px;
-        /* right:  32%;
-        top: 53%; */
+        left: -10px;
     }
-
-  
 
     .nav_page{
         display: flex;
@@ -179,19 +183,19 @@
     }
 
     .menu{
-        z-index: 2;
         display: block;
         width: 30px;
         height: 30px;
     }
 
-    .nav_page .nav_a a{
+    .nav_a a{
         width: 70%;
         font-weight: 500;
+        font-size: 40px;
         color: white;
     }
 
-    .nav_page .nav_a a:first-child{
+    .nav_a a:first-child{
         display: block;
         display: flex;
         justify-content: center;
@@ -200,7 +204,7 @@
         padding: 0 5px;
     }
 
-    .nav_page .nav_a a:last-child{
+    .nav_a a:last-child{
         display: block;
         display: flex;
         justify-content: center;
@@ -211,7 +215,7 @@
         padding-left: 20px;
     }
 
-    .nav .nav_a{
+    .nav_a{
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -221,19 +225,15 @@
         height: 100%;
         width: 100%;
         background-color: rgba(0, 0, 0, 0.9);
-        padding: 5px;
-        border-radius: 5px;
         opacity: 0;
-        transition: opacity, transform;
-        transition-duration: 0.5s;
         transform: translateY(-110%);
-        pointer-events: none;
         gap: 15px;
         box-shadow:
         inset 0 -3em 3em rgba(0, 0, 0, 0.1),
         0 0 0 2px rgb(255, 255, 255),
         0.3em 0.3em 1em rgba(0, 0, 0, 0.3);  
-        /* pointer-events: none; */
+        transition: transform;
+        transition-duration: 0.5s;
     }
 
     .nav .active{
@@ -243,3 +243,10 @@
     }
 
 }
+
+@media(max-width: 410px){
+    .nav_a a{
+        font-size: 16px;
+    }
+}
+
