--- a/PROJECT/project/src/components/NewSeason/style.module.css
+++ b/PROJECT/project/src/components/NewSeason/style.module.css
@@ -3,6 +3,8 @@
     background-size: cover;
     background-position: center;
     color: white;
+    height: 600px;
+    transition: 0.5s; 
 }
 
 .container_sale{
@@ -11,10 +13,11 @@
     align-items: center;
     padding-left: 50px;
     height: 600px;
+    transition: 0.5s;    
 }
 
 
-.h1{
+.title{
     display: flex;
     flex-direction: column;
     font-size: 80px;
@@ -32,3 +35,60 @@
     font-size: 25px;  
 }
 
+@media(max-width: 736px){
+    .title{
+        font-size: 60px;
+    }
+}
+
+@media(max-width: 500px){
+    .container{
+        height: 300px;
+        object-fit: contain;
+        object-position: top;
+    }
+
+    .title{
+        font-size: 40px;
+        padding-bottom: 30px;
+    }
+
+    .btn{
+        padding: 15px 30px;
+        border-radius: 13px;
+        font-size: 15px;  
+    }
+
+    .container_sale{
+        height: 300px;
+    }
+
+}
+
+@media(max-width: 380px){
+    .title span{
+        font-size: 20px;
+    }
+
+    .btn{
+        padding: 10px 20px;
+        border-radius: 10px;
+        font-size: 15px;  
+    }
+
+    .container{
+        height: 200px;
+        object-fit: contain;
+        object-position: top;
+    }
+
+    .container_sale{
+        padding-left: 25px;
+        height: 100%;
+    }
+
+    .title{
+        padding-bottom: 20px;
+    }
+   
+}
