--- a/PROJECT/project/src/components/ProductId/style.module.css
+++ b/PROJECT/project/src/components/ProductId/style.module.css
@@ -3,19 +3,21 @@
 }
 
 .container h2{
+    transition: 0.5s;
     font-size: 36px;
     font-weight: 600;
 }
 
 .product{
+    transition: 0.5s;
     display: grid;
     grid-template-columns: repeat(1, 2fr 1fr);
     gap: 128px;
     padding: 30px 0 184px;
-    
 }
 
 .img{ 
+    transition: 0.5s;
     object-fit: cover;
     width: 710px;
     height: 710px;
@@ -27,6 +29,7 @@
 }
 
 .info{
+    transition: 0.5s;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -40,6 +43,7 @@
 }
 
 .item_price{
+    transition: 0.5s;
     font-size: 70px;
     font-weight: 600;
 }
@@ -84,6 +88,7 @@
 }
 
 .btn{
+    transition: 0.5s;
     border: none;
     background: none;
     width: 340px;
@@ -111,5 +116,66 @@
 }
 
 .description p:last-child{
+    transition: 0.5s;
     font-weight: 500;
+}
+
+@media(max-width: 1300px){
+    .product{
+       gap: 20px; 
+    }
+}
+
+@media(max-width: 1140px){
+    .product{
+        grid-template-columns: repeat(auto-fit, minmax(710px, 1fr));
+        gap: 20px; 
+    }
+
+    .img{ 
+        width: 100%;
+    }
+
+    .info{
+        gap: 30px;
+        padding-top: 0;
+    }
+}
+
+@media(max-width: 800px){
+    .product{
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); 
+        padding: 30px 0 0px;
+    }
+    .img{ 
+        height: 350px;
+    }
+}
+
+@media(max-width: 470px){
+    .product{
+        grid-template-columns: repeat(auto-fit, minmax(226px, 1fr)); 
+    }
+
+    .container h2{
+        font-size: 20px;
+    }
+
+    .img{ 
+        height: 150px;
+    }
+
+    .description p:last-child{
+        padding: 0;
+        font-size: 16px;
+    }
+
+    .btn{
+        width: 100%;
+        padding: 25px 0;
+    }
+
+    .item_price{
+        font-size: 40px;
+    }
 }
