--- a/PROJECT/project/src/components/ProductsContainer/style.module.css
+++ b/PROJECT/project/src/components/ProductsContainer/style.module.css
@@ -1,11 +1,22 @@
 .container{
     padding: 50px 0 44px;
+    transition: 0.5s;
 }
 
-.container h2{
+.title{
+    width: 290px;
+}
+
+.title{
     color: #000;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 700;
     padding-bottom: 80px;
 }
 
+
+@media(max-width: 1470px){
+    .container{
+        padding:0 20px ;
+    }
+}
