--- a/PROJECT/project/src/components/Sale/style.module.css
+++ b/PROJECT/project/src/components/Sale/style.module.css
@@ -1,5 +1,6 @@
 .container{
     padding: 50px 0 44px;
+    transition: 0.5s;
 }
 
 .container h2{
@@ -7,5 +8,11 @@
     font-size: 40px;
     font-weight: 700;
     padding-bottom: 20px;
+}
+
+@media(max-width: 1470px){
+    .container{
+        padding: 50px 20px 44px;
+    }
 }
 
