--- a/PROJECT/project/src/components/SaleAll/style.module.css
+++ b/PROJECT/project/src/components/SaleAll/style.module.css
@@ -1,5 +1,6 @@
 .container{
     padding: 50px 0 44px;
+    transition: 0.5s;
 }
 
 .container h2{
@@ -9,3 +10,8 @@
     padding-bottom: 80px;
 }
 
+@media(max-width: 1470px){
+    .container{
+        padding: 50px 20px 44px;
+    }
+}
