--- a/PROJECT/project/src/components/Search/style.module.css
+++ b/PROJECT/project/src/components/Search/style.module.css
@@ -1,46 +1,87 @@
 .container{
-    display: flex;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(337px, 1fr));
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 34px;
+    gap: 30px;
+    width: 100%;
+}
+
+.name_sorting{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 15px;
+}
+
+.name_sorting p{
+    width: 200px;
+}
+
+.name_sorting input{
+    height: 42px;
+    border-radius: 7px;
+    padding: 10px;
+    width: 100%;
 }
 
 .container .search_price{
     display: flex;
     align-items: center;
-    gap: 15px;
+    justify-content: space-between;
+    gap: 10px;
 }
 
 .search_price input{
-    width: 103px;
+    width: 100%;
     height: 42px;
     border-radius: 7px;
     padding: 10px;
 }
 
 .container .search_sale{
-    margin-left: 40px;
-    align-items: center;
     display: flex;
-    gap: 40px;
-}
-
-.search_sale p{
-    width: 190px;
+    align-items: center;
+    justify-content: space-between;
+    
 }
 
 .container .search_option{
-    margin-left: 90px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 42px;
 }
 
 .container .select{
-    width: 220px;
+    width: 100%;
     border-radius: 7px;
     padding:9px 10px;
     font-size: 16px;
     font-weight: 500;
+}
+
+.container button{
+    height: 42px;
+    border-radius: 7px;
+    padding: 10px;
+    font-size: 20px;
+    font-weight: 600;
+    border: none;
+    background: none;
+    cursor: pointer;
+    color: white;
+    background-color: transparent;
+    background: #393;
+    box-shadow:
+    0.3em 0.1em 1em rgb(64, 123, 61),
+    0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.1em 1em rgba(0, 0, 0, 0.196);
+}
+
+@media(max-width: 400px){
+    .container {
+        grid-template-columns: repeat(auto-fit, minmax(226px, 1fr));
+    }
 }
