--- a/PROJECT/project/src/components/BasketCalculation/style.module.css
+++ b/PROJECT/project/src/components/BasketCalculation/style.module.css
@@ -1,4 +1,5 @@
 .order{
+    margin-top: 122px;
     display: flex;
     flex-direction: column;
     gap: 42px;
@@ -12,7 +13,14 @@
     transition: 0.5s;
 }
 
-.order p{
+.active {
+    border: 2px solid white;
+    box-shadow:
+    0.3em 0.3em 1em rgb(197, 220, 196),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.5);
+}
+
+.order .text{
     font-size: 28px;
     font-weight: 600;
 }
@@ -35,7 +43,10 @@
 .number{
     display: flex;
     flex-direction: column;
-    gap: 25px;
+}
+
+.number button{
+    margin-top: 25px;
 }
 
 .number input{
@@ -55,11 +66,28 @@
     cursor: pointer;
 }
 
+.error_text{
+    color: rgb(250, 139, 139);
+    text-align: end;
+    font-size: 20px;
+}
+
+.active .error_text{
+    color: rgb(250, 139, 139);
+}
+
 @media(max-width: 1440px){
     .order{
         gap: 10px;
         padding: 25px;
-        height: 310px;
+        height: 320px;
+    }
+}
+
+@media(max-width: 1140px){
+    .order{
+        margin-top: 0;
+        transition: 0s;
     }
 }
 
@@ -68,7 +96,7 @@
         height: 230px;
     }
 
-    .order p {
+    .order .text{
         font-size: 25px;
     }
 
@@ -81,5 +109,9 @@
     .number button{
         height: 40px;
         border-radius: 15px;
+    }
+
+    .error_text{
+        font-size: 14px;
     }
 }
