--- a/PROJECT/project/src/components/BasketContainer/style.module.css
+++ b/PROJECT/project/src/components/BasketContainer/style.module.css
@@ -1,13 +1,44 @@
 .container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(670px, 2fr) minmax(337px, 1fr));
+    grid-template-columns: repeat(1, 2fr 1fr);
     gap: 60px;
     padding-bottom: 143px;
     transition: 0.5s;
 }
 
+.info img{
+    transition: 0.5s;
+    object-fit: cover;
+    width: 100%; 
+}
+
+.img p{
+    padding-top: 300px;
+    padding-right: 60px;
+    font-size: 30px;
+    font-weight: 600;
+}
+.title h2{
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.back_store{
+    margin: 16px 0 34px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 10px;
+    font-size: 20px;
+    font-weight: 500;
+}
+
 @media(max-width: 1440px){
     .container{
+        padding:0 20px;
+    }
+
+    .info img{
         padding:0 20px;
     }
 }
@@ -26,7 +57,10 @@
 
 @media(max-width: 410px){
     .container{
-        grid-template-columns: repeat(auto-fit, minmax(226px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(227px, 1fr));
+    }
+    .title h2{
+        width: 300px;
     }
 }
 
