--- a/PROJECT/project/src/components/BasketItem/style.module.css
+++ b/PROJECT/project/src/components/BasketItem/style.module.css
@@ -10,15 +10,23 @@
     gap: 20px;
     height: 246px;
     border-top: 1px solid black;
-    transition: 0.5s;
+    transition: 0.1s;
+}
+
+.active{
+    border-top: 1px solid white;
 }
 
 .card:hover {
-    transform: scale(1.02);
+    transform: scale(1.005);
 }
 
 .card:last-child{
     border-bottom: 1px solid black;
+}
+
+.active:last-child{
+    border-bottom: 1px solid white;
 }
 
 .btn_top{
@@ -59,6 +67,10 @@
     width: 140px;
     border-radius: 12px;
     padding: 10px 15px; 
+}
+
+.active .count{
+    border: 1px solid white;
 }
 
 .count p{
@@ -103,7 +115,6 @@
     font-weight: 500;
     text-decoration: line-through;
 }
-
 
 .btn{
     display: flex;
