--- a/PROJECT/project/src/components/CategoriesItem/style.module.css
+++ b/PROJECT/project/src/components/CategoriesItem/style.module.css
@@ -13,15 +13,22 @@
     height: 350px;
     width: 100%;
     margin-bottom: 20px;
-    box-shadow:
-    inset 0 -3em 3em rgba(0, 0, 0, 0.5),
-    0 0 0 2px rgb(255, 255, 255),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.5);
-    transition: 0.5s;
 }
 
 .item img:hover {
     transform: scale(1.02);
+    box-shadow:
+    inset 0 -3em 3em rgba(0, 0, 0, 0.5),
+    0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.5);
+    transition: 0.1s;
+}
+
+.active img:hover {
+    box-shadow:
+    0.3em 0.3em 2em rgb(64, 123, 61),
+    0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.5);
 }
 
 @media(max-width: 400px){
