--- a/PROJECT/project/src/components/ProductId/style.module.css
+++ b/PROJECT/project/src/components/ProductId/style.module.css
@@ -22,10 +22,6 @@
     width: 710px;
     height: 710px;
     border-radius: 20px; 
-    box-shadow:
-    inset 0 -3em 3em rgba(0, 0, 0, 0.5),
-    0 0 0 2px rgb(255, 255, 255),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.5);
 }
 
 .info{
@@ -43,9 +39,12 @@
 }
 
 .item_price{
-    transition: 0.5s;
     font-size: 70px;
     font-weight: 600;
+}
+
+.active .item_price{
+   color: white;
 }
 
 .item_price div p{
@@ -71,7 +70,6 @@
     padding-bottom: 13px;
 }
 
-
 .price{
     color: #8B8B8B;
     font-size: 20px;
@@ -80,11 +78,19 @@
     padding-bottom: 13px;
 }
 
+.active .price{
+    color: #8B8B8B;
+}
+
 .sale{
     color: #FF32A1;
     font-size: 20px;
     font-weight: 600;
     padding-bottom: 13px;
+}
+
+.active .sale{
+    color: #FF32A1;
 }
 
 .btn{
@@ -99,8 +105,19 @@
     font-size: 28px;
     font-weight: 700;
     cursor: pointer;
+}
+
+.btn:hover{
+    transition: 0s;
+    background: rgb(68, 202, 68);
     box-shadow:
-    
+    0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.5);
+}
+
+.active .btn:hover{
+    box-shadow:
+    0.3em 0.3em 2em rgb(64, 123, 61),
     0 0 0 2px rgb(255, 255, 255),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.5);
 }
