--- a/PROJECT/project/src/components/Products/style.module.css
+++ b/PROJECT/project/src/components/Products/style.module.css
@@ -1,11 +1,11 @@
 .products{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(337px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(337px, 1fr));
     gap: 30px;
 }
 
 @media(max-width: 400px){
     .products {
-        grid-template-columns: repeat(auto-fit, minmax(226px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(226px, 1fr));
     }
 }
