--- a/PROJECT/project/src/components/ProductsContainer/style.module.css
+++ b/PROJECT/project/src/components/ProductsContainer/style.module.css
@@ -14,9 +14,8 @@
     padding-bottom: 80px;
 }
 
-
 @media(max-width: 1470px){
     .container{
-        padding:0 20px ;
+        padding: 50px 20px 44px;
     }
 }
