--- a/PROJECT/project/src/components/ProductsItem/style.module.css
+++ b/PROJECT/project/src/components/ProductsItem/style.module.css
@@ -3,23 +3,43 @@
     height: 300px;
     width: 100%;
     margin-bottom: 20px;
-    border-radius: 20px; 
+    border-radius: 20px;  
+    position: relative;  
+}
+
+.count{
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    gap: 10px;
+    padding: 6px;
+    border-radius: 15px;
+    margin: 10px;
+    color: white;
+}
+
+.item img:hover{
     box-shadow:
     inset 0 -3em 3em rgba(0, 0, 0, 0.5),
     0 0 0 2px rgb(255, 255, 255),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.5);
-    transition: 0.5s; 
-    
+    transition: 0.1s; 
 }
 
+.active img:hover {
+    box-shadow:
+    0.3em 0.3em 2em rgb(64, 123, 61),
+    0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.5);
+}
 .card:hover {
     transform: scale(1.02);
 }
 
 .card{ 
-    /* position: relative; */
+    position: relative;
     border-radius: 20px; 
-    transition: 0.5s; 
+    transition: 0.1s; 
 }
 
 .btn_container{
@@ -31,7 +51,6 @@
 .btn{
     position: absolute;
     z-index: 1;
-    /* margin: 0 29px; */
     width: 84%;
     height: 72px;
     border-radius: 21px;
@@ -40,18 +59,13 @@
     font-size: 18px;
     font-weight: 600;
     cursor: pointer;
-    /* left: 0; */
-    /* bottom: 164px; */
     top: 188px;
 
-    /* display: none; */
     opacity: 0;
-    transition: opacity .35s;
-    
+    transition: opacity .35s;   
 }
 
 .card:hover .btn{
-    /* display: block; */
     opacity: 1; 
 }
 
@@ -83,10 +97,18 @@
     text-decoration: line-through;
 }
 
+.active .price{
+    color: #8B8B8B;
+}
+
 .sale{
     color: #FF32A1;
     font-size: 20px;
     font-weight: 600;
+}
+
+.active .sale{
+    color: #FF32A1;  
 }
 
 @media(max-width: 400px){
