--- a/PROJECT/project/src/components/Search/style.module.css
+++ b/PROJECT/project/src/components/Search/style.module.css
@@ -26,7 +26,7 @@
     width: 100%;
 }
 
-.container .search_price{
+.search_price{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -40,21 +40,24 @@
     padding: 10px;
 }
 
-.container .search_sale{
+.search_sale{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
 }
 
-.container .search_option{
+.active{
+   display: none;
+}
+
+.search_option{
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 42px;
 }
 
-.container .select{
+.select{
     width: 100%;
     border-radius: 7px;
     padding:9px 10px;
