--- a/PROJECT/project/src/components/UI/Loading/style.module.css
+++ b/PROJECT/project/src/components/UI/Loading/style.module.css
@@ -1,9 +1,9 @@
 .loading {
-    width: 100%; /*растягиваем окно по всей ширине*/
-    height: 100%; /*растягиваем окно по всей высоте*/
+    width: 100%;
+    height: 100vh; 
 	background: black;
-    background-color: rgba(0, 0, 0, 0.7); /*делаем цвет фона черный с прозрачностью 0.4*/
-    position: fixed; /*при скролле анимация будет оставаться по середине*/
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
     top: 0;
     left: 0;
   
